crates/reinhardt-urls/crates/routers-macros/tests/ui/fail/invalid_param_name_hyphen.rs
use reinhardt_routers_macros::path;

fn main() {
    let _ = path!("/users/{user-id}/");
}
